	13005 Angelic Wing Dagger:	NEED INFO.
	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
08/26
	* Reduced weapon range of all guns by 1 [Playtester]
08/25
	* Shinobi Belt combo now also works with slotted Ninja Suit [Playtester]
08/24
	* Updated X.3 iRO mob names [Playtester]
08/23
	* Corrected the healing value of novice pots. [MasterOfMuppets]
08/22
	* Fixed SP usage of some Gunslinger skills [Playtester]
	* Added a duration to Disarm [Playtester]
	* Final fix on Grand Cross weapon [Playtester]
	* Some fixes on Grand Cross weapon, might need more fixes [Playtester]
	* Removed event bonus on Celebration Ring [Playtester]
	* Applied Mpeg's fix on GS according to kRO's values [Toms]
	* Updated Embryo creation, put "Potion Creation Guide" instead of "Embryo Creation Guide"
	  according to RockmanEXE's & iRO info [Toms]
	* Updated range of guns according to RockmanEXE's info [Playtester]
	* Updated some items thanks to Haplo [Playtester]
08/21
	* Increased splash range of HVAN_EXPLOSION to 4. [Skotlex]
	* Added delay to HLIF_AVOID [Toms]
08/20
	* Fixed Fling not reducing DEF for 30 seconds [Playtester]
	* Updates Zeny givers (Red Pouch) [Lupus]
08/19
	* Removed event bonus of 4 year anniversary hat [Playtester]
	* Added HAMI_CASTLE block time [Toms]
	* Updated NJ_BAKUENRYU skill tree [Toms]
	* Updated HLIF_CHANGE skill [Toms]
	* Updated Kouenka, removed aftercast delay [Toms]
	* Fixed some Ninja weapons (1Hand Sword -> Dagger) [Toms]
08/18
	* Made HLIF_HEAL a self skill that auto-selects target to caster's master.
	  [Skotlex]
	* Fixed Kouenka not having an aftercast delay on levels greater 1 [Playtester]
08/17
	* Gospel can't stack anymore [Playtester]
08/16